Fix second button style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="btn btn--big btn--green">
                 <i class="fas fa-plus"></i>
             </button>
-            <button class="btn btn--big btn--ble">
+            <button class="btn btn--big btn--blue">
                 <i class="fas fa-minus"></i>
             </button>
             <button class="btn btn--big btn--orange">
